fixed left positioning for hamburger on mobile devices

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -258,7 +258,7 @@ nav ul li a:hover:after {
       opacity: 1;
       position: absolute;
       top: 0;
-      left: 10%;
+      left: 0;
       z-index: 1;
     }
     ul {
